Sizing issues on mobile fixed

--- a/src/app/pages/search-page/components/game-list/game-list.component.scss
+++ b/src/app/pages/search-page/components/game-list/game-list.component.scss
@@ -6,7 +6,7 @@
 
 .cdk-viewport{
     display: flex;
-    height: calc(100vh - 64px);
+    height: 100%;
     width: 100%;
 }
 
